src/test/deca/context/valid/Objet/redefinition_method1.deca
// Description:
//    test de la redéfinition d'une méthode sans paramètre
//
// Resultats:
//   
//
// Historique:
//    cree le 18/01/2022

class A {
    int get() {}
}

class B extends A{
    int get() {}
}



