src/test/deca/context/invalid/Objet/wrong_redef_type.deca
// Description:
//    test de faire redéfinition d'une méthode en changeant le type de retour 
//
// Resultats:
//  17:4: The method is already defined in a super class but  with a diffrent return type
//
// Historique:
//    cree le 20/01/2022

class A  {
    int i ;
    int get(){}
    
}

class B extends A {
    float get() {}
}
{}



